[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/fonts/font_terminal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/frames/ui_panel.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/fonts/ui_font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Game/MatchStats.gd" type="Script" id=4]
[ext_resource path="res://Game/PilotInfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/ListBox.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.270588, 0.4, 0.454902, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.270588, 0.4, 0.454902, 1 )
draw_center = false

[node name="MatchStats" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -566.0
margin_top = -301.0
margin_right = 566.0
margin_bottom = 301.0
grow_horizontal = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainBox" type="HBoxContainer" parent="."]
margin_right = 1132.0
margin_bottom = 602.0
custom_constants/separation = 0

[node name="Rankings" type="PanelContainer" parent="MainBox"]
margin_right = 572.0
margin_bottom = 602.0
custom_styles/panel = ExtResource( 2 )

[node name="HangarView" type="TextureRect" parent="MainBox/Rankings"]
margin_left = 18.0
margin_top = 18.0
margin_right = 554.0
margin_bottom = 584.0
rect_min_size = Vector2( 480, 270 )
expand = true
stretch_mode = 6

[node name="Body" type="VBoxContainer" parent="MainBox/Rankings"]
margin_left = 18.0
margin_top = 18.0
margin_right = 554.0
margin_bottom = 584.0

[node name="Title" type="Label" parent="MainBox/Rankings/Body"]
margin_right = 536.0
margin_bottom = 26.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
text = "! - PERFORMANCE BONUSES - !"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="GridContainer" parent="MainBox/Rankings/Body"]
margin_top = 30.0
margin_right = 536.0
margin_bottom = 566.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 2

[node name="Team1Mech1" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_right = 264.0
margin_bottom = 128.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team1Mech1" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team1Mech1"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="Team2Mech1" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_left = 272.0
margin_right = 536.0
margin_bottom = 128.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team2Mech1" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team2Mech1"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="Team1Mech2" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_top = 136.0
margin_right = 264.0
margin_bottom = 264.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team1Mech2" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team1Mech2"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="Team2Mech2" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_left = 272.0
margin_top = 136.0
margin_right = 536.0
margin_bottom = 264.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team2Mech2" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team2Mech2"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="Team1Mech3" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_top = 272.0
margin_right = 264.0
margin_bottom = 400.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team1Mech3" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team1Mech3"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="Team2Mech3" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_left = 272.0
margin_top = 272.0
margin_right = 536.0
margin_bottom = 400.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team2Mech3" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team2Mech3"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="Team1Mech4" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_top = 408.0
margin_right = 264.0
margin_bottom = 536.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team1Mech4" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team1Mech4"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="Team2Mech4" type="HBoxContainer" parent="MainBox/Rankings/Body/List"]
margin_left = 272.0
margin_top = 408.0
margin_right = 536.0
margin_bottom = 536.0

[node name="PilotInfo" parent="MainBox/Rankings/Body/List/Team2Mech4" instance=ExtResource( 5 )]
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="MainBox/Rankings/Body/List/Team2Mech4"]
margin_left = 132.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
text = "Bonus List
Bonus 1
Bonus 2
Bonus 3"

[node name="SideBox" type="VBoxContainer" parent="MainBox"]
margin_left = 572.0
margin_right = 1132.0
margin_bottom = 602.0

[node name="TeamStats" type="PanelContainer" parent="MainBox/SideBox"]
margin_right = 560.0
margin_bottom = 230.0
rect_min_size = Vector2( 560, 0 )
size_flags_vertical = 0
custom_styles/panel = ExtResource( 2 )

[node name="Body" type="HBoxContainer" parent="MainBox/SideBox/TeamStats"]
margin_left = 18.0
margin_top = 18.0
margin_right = 542.0
margin_bottom = 212.0
grow_horizontal = 2
custom_constants/separation = 0

[node name="Team1" type="VBoxContainer" parent="MainBox/SideBox/TeamStats/Body"]
margin_right = 172.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="TeamHeader" type="MarginContainer" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_right = 172.0
margin_bottom = 26.0

[node name="TeamColor" type="ColorRect" parent="MainBox/SideBox/TeamStats/Body/Team1/TeamHeader"]
margin_right = 172.0
margin_bottom = 26.0

[node name="Name" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1/TeamHeader"]
margin_right = 172.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Team Name"
align = 1

[node name="Hits" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_top = 34.0
margin_right = 172.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Crits" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_top = 58.0
margin_right = 172.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Misses" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_top = 82.0
margin_right = 172.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="DamageOut" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_top = 106.0
margin_right = 172.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="DamageIn" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_top = 130.0
margin_right = 172.0
margin_bottom = 146.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="PartDest" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_top = 154.0
margin_right = 172.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="PartLost" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team1"]
margin_top = 178.0
margin_right = 172.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Stats" type="VBoxContainer" parent="MainBox/SideBox/TeamStats/Body"]
margin_left = 172.0
margin_right = 351.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Title" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_right = 179.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 9 )
text = "STATS"
align = 1

[node name="Hits" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_top = 34.0
margin_right = 179.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Hits"
align = 1

[node name="Crits" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_top = 58.0
margin_right = 179.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Crits"
align = 1

[node name="Misses" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_top = 82.0
margin_right = 179.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Misses"
align = 1

[node name="DamageOut" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_top = 106.0
margin_right = 179.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Damage Dealt"
align = 1

[node name="DamageIn" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_top = 130.0
margin_right = 179.0
margin_bottom = 146.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Damage Taken"
align = 1

[node name="PartDest" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_top = 154.0
margin_right = 179.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Parts Destroyed"
align = 1

[node name="PartLost" type="Label" parent="MainBox/SideBox/TeamStats/Body/Stats"]
margin_top = 178.0
margin_right = 179.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Parts Lost"
align = 1

[node name="Team2" type="VBoxContainer" parent="MainBox/SideBox/TeamStats/Body"]
margin_left = 351.0
margin_right = 524.0
margin_bottom = 194.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="TeamHeader" type="MarginContainer" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_right = 173.0
margin_bottom = 26.0

[node name="TeamColor" type="ColorRect" parent="MainBox/SideBox/TeamStats/Body/Team2/TeamHeader"]
margin_right = 173.0
margin_bottom = 26.0

[node name="Name" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2/TeamHeader"]
margin_right = 173.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Team Name"
align = 1

[node name="Hits" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_top = 34.0
margin_right = 173.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Crits" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_top = 58.0
margin_right = 173.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Misses" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_top = 82.0
margin_right = 173.0
margin_bottom = 98.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="DamageOut" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_top = 106.0
margin_right = 173.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="DamageIn" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_top = 130.0
margin_right = 173.0
margin_bottom = 146.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="PartDest" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_top = 154.0
margin_right = 173.0
margin_bottom = 170.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="PartLost" type="Label" parent="MainBox/SideBox/TeamStats/Body/Team2"]
margin_top = 178.0
margin_right = 173.0
margin_bottom = 194.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Payout" parent="MainBox/SideBox" instance=ExtResource( 6 )]
margin_top = 234.0
margin_right = 560.0
margin_bottom = 300.0
title = "Pay Outs"
